@@ -49,9 +49,10 @@ If your interested my website is [![Web Site](https://img.shields.io/badge/Jims%
 - [Visual Appearance](#visual-appearance)
 - [Galaxy Line](#galaxy-line)
 - [Extra Plugins](#extra-plugins)
-- [Java LSP Install](#java-lsp-install)
-- [Key Bindings](#key-bindings)
+- [Configured LSP's](#configures-lsp's)
+- [Key Bindings](#key-bindings-cheatsheet)
 - [Some Useful Links](#some-useful-links)
+
 <!-- }}}1 -->
 
 # Visual Appearance
@@ -102,128 +103,71 @@ The line is split into 5 main sections, 3 on the left and 2 on the right:
   Note the column information is colour coded, >80 = Yellow >120 = Red.
   <!-- }}}1 -->
 
-# Java LSP Install
-
-<!-- {{{1 -->
-
-Note Java is not stable at the moment but it looks like there is plenty of
-activity, so I guess sometime in 2021 it will reach a tipping point.
-
-![Java Lsp](./utils/media/JavaLsp.png)
-
-1. Download and Install Java 11
-
-At the time of writing 1/May/2021 you must use Java 11, **Java 16 will not
-work.** I have not investigated why, it was just simpler to follow the
-instructions (and leave that research for someone who has the time).
-
-```bash
-# Download
-wget https://corretto.aws/downloads/latest/amazon-corretto-11-x64-linux-jdk.tar.gz
-
-# Untar
-tar zxvf amazon-corretto-11-x64-linux-jdk.tar.gz
-
-# Move to /opt
-sudo mv amazon-corretto-11.0.11.9.1-linux-x64 /opt
-
-# Create a nice link
-sudo ln -s /opt/amazon-corretto-11.0.11.9.1-linux-x64 /opt/java-11
-```
-
-2. Setup your environment
-
-```bash
-export JAVA_HOME=/opt/java-11
-export PATH=$PATH:$JAVA_HOME/bin
-```
-
-3. Install the LSP for Java
-
-Full instructions are [here](https://github.com/eclipse/eclipse.jdt.ls) but the
-condensed instructions are as follows.
-
-4. Clone the repo and build
-
-See [these instructions](https://github.com/mfussenegger/nvim-jdtls).
-This took a while on my machine (10 minutes on Ryzen 7 3700X @ 3.600GHz)
-
-```bash
-git clone git@github.com:eclipse/eclipse.jdt.ls.git
-cd eclipse.jdt.ls
-./mvnw clean verify
-cd ..
-
-sudo mv eclipse.jdt.ls /opt
-```
-
-5. Create startup file
-   This must be and executable called `java-linux-ls` in a folder on your path.
-
-```bash
-#!/usr/bin/env bash
-export JAVA_HOME="/opt/java-11"
-export JAR="/opt/eclipse.jdt.ls/org.eclipse.jdt.ls.product/target/repository/plugins/org.eclipse.equinox.launcher_*.jar"
-export JDTLS_CONFIG="/opt/eclipse.jdt.ls/org.eclipse.jdt.ls.product/target/repository/config_linux"
-export WORKSPACE="$HOME/workspace"
-
-$JAVA_HOME/bin/java \
-  -Declipse.application=org.eclipse.jdt.ls.core.id1 \
-  -Dosgi.bundles.defaultStartLevel=4 \
-  -Declipse.product=org.eclipse.jdt.ls.core.product \
-  -Dlog.protocol=true \
-  -Dlog.level=ALL \
-  -Xms1g \
-  -Xmx2G \
-  -jar           $(echo "$JAR") \
-  -configuration "$JDTLS_CONFIG" \
-  -data          "$WORKSPACE" \
-  --add-modules=ALL-SYSTEM \
-  --add-opens java.base/java.util=ALL-UNNAMED \
-  --add-opens java.base/java.lang=ALL-UNNAMED
-```
-
-6. Update [`init.lua`](https://github.com/jimcornmell/LunarVim/blob/master/init.lua)
-
-```lua
-require('lsp.java-ls')
-```
-
-7. Update [`lua/plugins.lua`](https://github.com/jimcornmell/LunarVim/blob/master/lua/plugins.lua)
-
-```lua
-use {"mfussenegger/nvim-jdtls", opt = true}
-require_plugin("nvim-jdtls")
-```
-
-8. Close and open LunarVim and run `:PackerSync`
-<!-- }}}1 -->
-
 # Extra Plugins
 
 <!-- {{{1 -->
 
 I've added a few extra plugins I use to the configuration:
 
-<!-- - [NVim Colorizer](https://github.com/norcalli/nvim-colorizer.lua) -->
-  <!-- - A high-performance color highlighter for Neovim which has no external dependencies! Written in performant Luajit. -->
-
 - [Vim Signature](https://github.com/kshenoy/vim-signature)
+
   - A plugin to place, toggle and display marks.
-    <!-- - [Tagbar](https://github.com/preservim/tagbar) -->
-    <!--   - A plugin that provides an easy way to browse the tags of the current file and get an overview of the files structure. -->
-    <!--   - Opened with <kbd>F11</kbd> -->
+
 - [Vim Eunuch](https://github.com/tpope/vim-eunuch)
+
   - Vim sugar for the UNIX shell commands that need it the most.
   - Also makes files starting with `#!` executable.
+
 - [Vim Surround](https://github.com/tpope/vim-surround)
+
   - Surround.vim is all about "surroundings": parentheses, brackets, quotes,
     XML tags, and more. The plugin provides mappings to easily delete, change and add such surroundings in pairs.
-    <!-- - [Java LSP](https://github.com/mfussenegger/nvim-jdtls) -->
-    <!--   - See [Java LSP Install](#java-lsp-install) -->
-    <!-- }}}1 -->
 
-# Key Bindings
+- [Dial](https://github.com/monaqa/dial.nvim)
+
+  - I've enabled a bunch of the predefined "incrementors", also added a few of my own, e.g: True<->False and full month names.
+  - [See the config for details](blob/master/lua/lv-dial/init.lua)I
+
+- [Hop](https://github.com/phaazon/hop.nvim)
+
+- [Markdown_preview](https://github.com/iamcco/markdown-preview.nvim)
+
+  - Open a markdown file and ":MarkdownPreview"
+
+- [Codi](https://github.com/metakirby5/codi.vim)
+
+  - I alias "bc" on the command line to get a powerful calculator scratchpad using python.
+
+- [Highlighturl](https://github.com/itchyny/vim-highlighturl)
+
+- [Fugitive](https://github.com/tpope/vim-fugitive)
+
+- [Lazygit](https://github.com/kdheepak/lazygit.nvim)
+
+  - <kbd>F8</kbd> to open.
+
+<!-- - [Ranger](https://github.com/kevinhwang91/rnvimr) -->
+  <!-- - Enabled with <kbd>-</kbd> key. -->
+
+<!-- - [Tagbar](https://github.com/preservim/tagbar) -->
+<!--   - A plugin that provides an easy way to browse the tags of the current file and get an overview of the files structure. -->
+<!--   - Opened with <kbd>F12</kbd> -->
+
+<!-- TODO -->
+<!-- TABNINE -->
+<!-- https://github.com/ChristianChiarulli/LunarVim/commit/15603354acdc5ab88a5eb0d70a7b3e17a1792efe -->
+
+<!-- }}}1 -->
+
+# Configured LSP's
+
+<!-- {{{1 -->
+
+- [SQL](https://github.com/nanotee/sqls.nvim)
+
+<!-- }}}1 -->
+
+# Key Bindings-Cheatsheet
 
 <!-- {{{1 -->
 
